--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -360,7 +360,6 @@ Wenn eine alte Kalkulationstabelle umgewandelt werden soll: Diese in FCInfo &oum
 <p><i>(Die Variable <b>switch_setVisible_GBox_014_Main_Tools</b> auf <code>false</code> setzen, um die Tafel auszublenden)"</i>
 </p><p>Nach dem Starten des Makros bleibt das Makro aktiv und das Fenster bleibt sichtbar. Zum Verlassen des Makros <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span> anklicken. Wird das Makro &uuml;ber die Kreuz-Schaltfl&auml;che verlassen, bleibt das Makro im Speicher und die Daten werden im "Ausgabefenster" von FreeCAD angezeigt; jetzt muss FreeCAD neu gestartet werden, um es zu verlassen.
 </p>
-<div class="mw-translate-fuzzy">
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 435px">
@@ -374,7 +373,6 @@ Wenn eine alte Kalkulationstabelle umgewandelt werden soll: Diese in FCInfo &oum
 </ul>
 </center>
 <div style="clear:both"></div>
-</div>
 <p><span id="Options"></span>
 </p>
 <h2><span class="mw-headline" id="Optionen">Optionen</span></h2>
@@ -711,13 +709,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119005305
+Cached time: 20260119005322
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.188 seconds
-Real time usage: 0.248 seconds
-Preprocessor visited node count: 1539/1000000
+CPU time usage: 0.248 seconds
+Real time usage: 0.534 seconds
+Preprocessor visited node count: 1538/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -727,19 +725,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.567      1 -total
-  6.27%    4.046     10 Template:Code
-  6.14%    3.965      8 Template:RadioButton
-  5.95%    3.844     44 Template:LineEdit
-  5.23%    3.379     10 Template:CheckBox
-  4.72%    3.046      1 Template:Macro/de
-  3.70%    2.389      1 Template:Codeextralink
-  3.49%    2.250      1 Template:CodeDownload
-  3.09%    1.996     30 Template:False
-  2.93%    1.890      5 Template:SpinBox
+100.00%  126.025      1 -total
+ 10.72%   13.506     10 Template:Code
+ 10.27%   12.943      5 Template:SpinBox
+  5.45%    6.865     30 Template:False
+  5.21%    6.568     44 Template:LineEdit
+  5.13%    6.462     10 Template:CheckBox
+  4.44%    5.598      1 Template:Macro/de
+  4.25%    5.361      1 Template:Caption
+  4.17%    5.260      1 Template:Codeextralink
+  4.00%    5.045      4 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119005305 and revision id 1740903. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119005321 and revision id 1740905. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
