--- a/wiki/Online_Help_Startpage.html
+++ b/wiki/Online_Help_Startpage.html
@@ -8,19 +8,19 @@
 <li><a href="hr/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--complete" title="Po&#269;etna stranica Online pomo&#263;i (100% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="it/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--complete" title="Pagina iniziale della Guida in linea (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="pl/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--complete" title="Strona pomocy online (100% translated)" lang="pl" dir="ltr">polski</a></li>
-<li><a href="pt/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--high" title="P&aacute;gina inicial da Ajuda Online (82% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
+<li><a href="pt/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--complete" title="P&aacute;gina inicial da Ajuda Online (100% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="pt-br/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--high" title="P&aacute;gina inicial da Ajuda Online (91% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ro/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--med" title="Online Help Startpage/ro (55% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="sk/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--high" title="&Scaron;tartovacia str&aacute;nka online pomoci (82% translated)" lang="sk" dir="ltr">sloven&#269;ina</a></li>
 <li><a href="sv/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--med" title="Online Help Startpage (64% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><a href="cs/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--med" title="Startovn&iacute; str&aacute;nka (64% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
+<li><a href="cs/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--complete" title="&Uacute;vodn&iacute; str&aacute;nka online n&aacute;pov&#283;dy (100% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="ru/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1043;&#1083;&#1072;&#1074;&#1085;&#1072;&#1103; &#1057;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; &#1054;&#1085;&#1083;&#1072;&#1081;&#1085; &#1057;&#1087;&#1088;&#1072;&#1074;&#1082;&#1080; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="uk/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--low" title="Online Help Startpage (9% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="zh/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--high" title="&#22312;&#32447;&#24110;&#21161;&#39318;&#39029; (82% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
 <li><a href="zh-cn/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--complete" title="&#22312;&#32447;&#24110;&#21161;&#36215;&#22987;&#39029; (100% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="zh-tw/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--low" title="Online Help Startpage (9% translated)" lang="zh-Hant-TW" dir="ltr">&#20013;&#25991;&#65288;&#33274;&#28771;&#65289;</a></li>
 <li><a href="ja/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--high" title="&#12399;&#12376;&#12417;&#12395; (73% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
-<li><a href="ko/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--high" title="&#50728;&#46972;&#51064; &#46020;&#50880;&#47568; &#49884;&#51089; &#54168;&#51060;&#51648; (91% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
+<li><a href="ko/Online_Help_Startpage.html" class="mw-pt-progress mw-pt-progress--complete" title="&#50728;&#46972;&#51064; &#46020;&#50880;&#47568; &#49884;&#51089; &#54168;&#51060;&#51648; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
     <div><a href="About_FreeCAD.html" title="About FreeCAD">About FreeCAD</a>
@@ -28,8 +28,8 @@
     <div><a href="Online_Help_Toc.html" title="Online Help Toc">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
 <figure class="mw-default-size mw-halign-right" typeof="mw:File"><a href="index.php?title=Crystal_Clear_app_tutorials.png&amp;filetimestamp=20090202153438&amp;.html" class="mw-file-description" title="150"><img alt="150" src="File/Crystal_Clear_app_tutorials.png" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="128" data-file-height="128"></a><figcaption>150</figcaption></figure>
-<h2><span class="mw-headline" id="Welcome_to_the_FreeCAD_on-line_help">Welcome to the FreeCAD on-line help</span></h2>
-<p>The FreeCAD help system is hosted on a <a rel="nofollow" class="external text" href="https://wiki.freecad.org">wiki</a> built, maintained and developed by the FreeCAD community of users and developers. It contains general information about FreeCAD, tutorials, precise documentation about each FreeCAD command, and programming documentation for Python and C++. It also contains translations of this documentation in several languages. We hope you will find here all the information you need. In case you have questions you can't find answers to in this documentation, have a look at the <a rel="nofollow" class="external text" href="https://forum.freecad.org">FreeCAD forum</a>, where you might find your question answered already, or find someone able to help you.
+<h2><span class="mw-headline" id="Benvenuti_nella_guida_on-line_di_FreeCAD">Benvenuti nella guida on-line di FreeCAD</span></h2>
+<p>Il sistema di aiuto di FreeCAD si trova su un wiki costruito, mantenuto e sviluppato dalla comunit&agrave; di utenti e sviluppatori di FreeCAD. Contiene informazioni generali su FreeCAD, tutorial, documentazione dettagliata su ogni comando di FreeCAD e documentazione di programmazione per Python e C++. Inoltre, include traduzioni di questa documentazione in diverse lingue. Speriamo che tu possa trovare qui tutte le informazioni di cui hai bisogno. Nel caso avessi domande a cui non trovi risposta in questa documentazione, dai un'occhiata al forum di FreeCAD, dove potresti scoprire che la tua domanda ha gi&agrave; una risposta o trovare qualcuno in grado di aiutarti.
 </p>
 <h3><span class="mw-headline" id="How_to_use">How to use</span></h3>
 <p>This document is divided into several sections:
@@ -64,29 +64,29 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251023170424
+Cached time: 20260119104804
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.092 seconds
-Real time usage: 0.146 seconds
+CPU time usage: 0.086 seconds
+Real time usage: 0.402 seconds
 Preprocessor visited node count: 132/1000000
 Post&#8208;expand include size: 6141/2097152 bytes
 Template argument size: 1882/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4312/5000000 bytes
+Unstrip post&#8208;expand size: 4344/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.075      1 -total
- 60.28%    4.265      1 Template:Userdocnavi
- 36.66%    2.594      2 Template:Docnav
- 36.33%    2.570      1 Template:Navigation_menu_2
+100.00%   31.686      1 -total
+ 63.11%   19.996      1 Template:Userdocnavi
+ 36.16%   11.459      2 Template:Docnav
+ 23.76%    7.530      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:110-0!canonical and timestamp 20251023170424 and revision id 1675072. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:110-0!canonical and timestamp 20260119104818 and revision id 1740940. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
