--- a/wiki/Online_Help_Startpage.html
+++ b/wiki/Online_Help_Startpage.html
@@ -28,8 +28,8 @@
     <div><a href="Online_Help_Toc.html" title="Online Help Toc">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
 <figure class="mw-default-size mw-halign-right" typeof="mw:File"><a href="index.php?title=Crystal_Clear_app_tutorials.png&amp;filetimestamp=20090202153438&amp;.html" class="mw-file-description" title="150"><img alt="150" src="File/Crystal_Clear_app_tutorials.png" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="128" data-file-height="128"></a><figcaption>150</figcaption></figure>
-<h2><span class="mw-headline" id="Benvenuti_nella_guida_on-line_di_FreeCAD">Benvenuti nella guida on-line di FreeCAD</span></h2>
-<p>Il sistema di aiuto di FreeCAD si trova su un wiki costruito, mantenuto e sviluppato dalla comunit&agrave; di utenti e sviluppatori di FreeCAD. Contiene informazioni generali su FreeCAD, tutorial, documentazione dettagliata su ogni comando di FreeCAD e documentazione di programmazione per Python e C++. Inoltre, include traduzioni di questa documentazione in diverse lingue. Speriamo che tu possa trovare qui tutte le informazioni di cui hai bisogno. Nel caso avessi domande a cui non trovi risposta in questa documentazione, dai un'occhiata al forum di FreeCAD, dove potresti scoprire che la tua domanda ha gi&agrave; una risposta o trovare qualcuno in grado di aiutarti.
+<h2><span class="mw-headline" id="Welcome_to_the_FreeCAD_on-line_help">Welcome to the FreeCAD on-line help</span></h2>
+<p>The FreeCAD help system is hosted on a <a rel="nofollow" class="external text" href="https://wiki.freecad.org">wiki</a> built, maintained and developed by the FreeCAD community of users and developers. It contains general information about FreeCAD, tutorials, precise documentation about each FreeCAD command, and programming documentation for Python and C++. It also contains translations of this documentation in several languages. We hope you will find here all the information you need. In case you have questions you can't find answers to in this documentation, have a look at the <a rel="nofollow" class="external text" href="https://forum.freecad.org">FreeCAD forum</a>, where you might find your question answered already, or find someone able to help you.
 </p>
 <h3><span class="mw-headline" id="How_to_use">How to use</span></h3>
 <p>This document is divided into several sections:
@@ -64,12 +64,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119104804
+Cached time: 20260119134412
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.086 seconds
-Real time usage: 0.402 seconds
+CPU time usage: 0.093 seconds
+Real time usage: 0.444 seconds
 Preprocessor visited node count: 132/1000000
 Post&#8208;expand include size: 6141/2097152 bytes
 Template argument size: 1882/2097152 bytes
@@ -80,13 +80,13 @@ Unstrip post&#8208;expand size: 4344/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.686      1 -total
- 63.11%   19.996      1 Template:Userdocnavi
- 36.16%   11.459      2 Template:Docnav
- 23.76%    7.530      1 Template:Navigation_menu_2
+100.00%   22.628      1 -total
+ 62.79%   14.207      1 Template:Userdocnavi
+ 36.38%    8.231      2 Template:Docnav
+ 25.01%    5.658      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:110-0!canonical and timestamp 20260119104818 and revision id 1740940. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:110-0!canonical and timestamp 20260119134408 and revision id 1740941. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
