--- a/wiki/Release_notes_1.1.html
+++ b/wiki/Release_notes_1.1.html
@@ -515,12 +515,12 @@
 <li>The alignment of sketches in SVG export and legacy DXF export has been fixed. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/19765">Pull request #19765</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260118222651
+Cached time: 20260119134631
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.311 seconds
-Real time usage: 0.477 seconds
+CPU time usage: 0.354 seconds
+Real time usage: 1.586 seconds
 Preprocessor visited node count: 746/1000000
 Post&#8208;expand include size: 3528/2097152 bytes
 Template argument size: 533/2097152 bytes
@@ -531,19 +531,19 @@ Unstrip post&#8208;expand size: 1570/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.573      1 -total
- 44.55%   15.403      1 Template:VersionPlus
- 13.70%    4.738      1 Template:VersionMinus
- 12.03%    4.158      2 Template:Message
-  7.78%    2.691      5 Template:KEY
-  7.26%    2.509      2 Template:PropertyData
-  4.30%    1.488      1 Template:TOCright
-  4.17%    1.442      2 Template:Variable
-  3.32%    1.148      1 Template:Incode
-  2.61%    0.902      1 Template:VeryImportantMessage
+100.00%   66.449      1 -total
+ 23.36%   15.521      2 Template:PropertyData
+ 20.31%   13.499      1 Template:VersionPlus
+ 12.36%    8.216      1 Template:Incode
+ 12.07%    8.021      5 Template:KEY
+ 11.22%    7.455      2 Template:Message
+  9.55%    6.347      2 Template:Variable
+  7.82%    5.193      1 Template:TOCright
+  5.86%    3.895      2 Template:FileName
+  5.76%    3.830      1 Template:VeryImportantMessage
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:363849-0!canonical and timestamp 20260118222717 and revision id 1740827. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:363849-0!canonical and timestamp 20260119134631 and revision id 1740827. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
