--- a/wiki/de/Release_notes_1.1.html
+++ b/wiki/de/Release_notes_1.1.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Release notes 1.1/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Release+notes+1.1&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Release_notes_1.1.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Release notes 1.1 (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--high" title="Notes de version 1.1 (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Release_notes_1.1.html" class="mw-pt-progress mw-pt-progress--med" title="Note di rilascio della versione 1.1 (42% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -423,9 +423,7 @@ Siehe <a href="../de/Help_FreeCAD.html" title="Help FreeCAD/de">FreeCAD Unterst&
 <p><span id="Material_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Arbeitsbereich_Material">Arbeitsbereich Material</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li>Materialien k&ouml;nnen jetzt in externen Datenspeichern gesichert werden.  Diese Funktion ist experimentell und muss beim Kompilieren des Quellcodes explizit aktiviert werden. Sie ist in den Standard-Builds von FreeCAD nicht verf&uuml;gbar.<a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/21047">Pull-Request #21047</a></li></ul>
-</div>
 <p><span id="Further_Material_improvements"></span>
 </p>
 <h3><span class="mw-headline" id="Weitere_Material-Verbesserungen">Weitere Material-Verbesserungen</span></h3>
@@ -582,35 +580,35 @@ Siehe <a href="../de/Help_FreeCAD.html" title="Help FreeCAD/de">FreeCAD Unterst&
 <li>Die Ausrichtung von Skizzen f&uuml;r SVG-Export und Legacy-DXF-Export wurde korrigiert. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/19765">Pull-Request #19765</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260119134637
+Cached time: 20260119144547
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.379 seconds
-Real time usage: 1.632 seconds
-Preprocessor visited node count: 618/1000000
+CPU time usage: 0.356 seconds
+Real time usage: 1.348 seconds
+Preprocessor visited node count: 617/1000000
 Post&#8208;expand include size: 3664/2097152 bytes
 Template argument size: 642/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1550/5000000 bytes
+Unstrip post&#8208;expand size: 1554/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  101.355      1 -total
- 21.39%   21.682      2 Template:PropertyData/de
- 19.13%   19.390      1 Template:VeryImportantMessage
- 12.77%   12.941      1 Template:Incode
- 12.31%   12.472      2 Template:Message
- 11.37%   11.527      2 Template:Variable
-  9.62%    9.751      5 Template:KEY
-  9.26%    9.384      1 Template:VersionMinus/de
-  7.57%    7.676      1 Template:VersionPlus/de
-  6.20%    6.280      1 Template:TOCright
+100.00%   75.273      1 -total
+ 16.14%   12.147      2 Template:PropertyData/de
+ 16.11%   12.130      2 Template:Message
+ 14.07%   10.594      1 Template:Incode
+ 10.51%    7.914      5 Template:KEY
+ 10.04%    7.560      1 Template:VersionPlus/de
+  9.55%    7.192      1 Template:VersionMinus/de
+  8.96%    6.748      1 Template:VeryImportantMessage
+  7.50%    5.647      1 Template:TOCright
+  7.19%    5.412      2 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:363975-0!canonical and timestamp 20260119134635 and revision id 1740943. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:363975-0!canonical and timestamp 20260119144544 and revision id 1740951. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
