--- a/wiki/de/Sketcher_Dimension.html
+++ b/wiki/de/Sketcher_Dimension.html
@@ -1,8 +1,8 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Sketcher Dimension/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Sketcher+Dimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Sketcher_Dimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Sketcher Dimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Contrainte de dimension (82% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="../it/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher: Dimensione (82% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="../fr/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Dimension (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../it/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher: Dimensione (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Szkicownik: Wi&#261;zania wymiar&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; &#1056;&#1072;&#1079;&#1084;&#1077;&#1088; (82% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--low" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12539;&#23544;&#27861; (9% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -87,9 +87,7 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal dimensions</a> and <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> have a distinct behavior compared to <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistance.svg&amp;filetimestamp=20240101173515&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistance.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">distance dimensions</a>. The first two dimension types also constrain the relative positions of the measured points so that they won't <a href="../Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">switch places</a>. For example, for a horizontal dimension the left point will always remain the left point. This is not the case for distance dimensions. When using this tool to apply a dimensional constraint to points with the same X- or Y-coordinate you need to take care when picking the point to position it. You can verify which dimension type will be created by checking the last item in the <a href="../Sketcher_Dialog.html#Constraints" title="Sketcher Dialog">Constraints section of the Sketcher Dialog</a>, this will dynamically update as you move the mouse.</li></ul>
-</div>
+<ul><li>Die Randbedingungen <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX/de">Horizontaler Abstand</a> und <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY/de">Vertikaler Abstand</a> verhalten sich anders im Vergleich zur Randbedingung <span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistance.svg&amp;filetimestamp=20240101173515&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistance.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance/de">Abstand</a>. Die ersten beiden legen auch die relativen Positionen der gemessenen Punkte zueinander fest, so dass sie nicht ihre <a href="../de/Sketcher_Workbench.html#Flipping" title="Sketcher Workbench/de">Pl&auml;tze tauschen</a>. Beispielsweise bleibt bei einem horizontalen Abstand der linke Punkt immer der linke Punkt. Dies ist nicht der Fall bei (normalen) Abst&auml;nden. Wird das Werkzeug eingesetzt, um Abst&auml;nde zwischen Punkten mit identischen X- oder Y-Koordinaten festzulegen, muss seine Position vorsichtig ausgew&auml;hlt werden. Es kann &uuml;berpr&uuml;ft werden, welche Art Abstand erstellt wird, indem das letzte Element im Abschnitt <a href="../de/Sketcher_Dialog.html#Randbedingungen" title="Sketcher Dialog/de">Randbedingungen des Sketcher-Dialogs</a> beobachtet wird; dieses wird automatisch aktualisiert, w&auml;hrend der Mauszeiger bewegt wird.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -134,13 +132,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20250921081903
+Cached time: 20260119144919
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.102 seconds
-Real time usage: 0.125 seconds
-Preprocessor visited node count: 261/1000000
+CPU time usage: 0.084 seconds
+Real time usage: 0.288 seconds
+Preprocessor visited node count: 260/1000000
 Post&#8208;expand include size: 23304/2097152 bytes
 Template argument size: 9064/2097152 bytes
 Highest expansion depth: 6/100
@@ -150,19 +148,19 @@ Unstrip post&#8208;expand size: 1712/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.495      1 -total
- 19.05%    2.571      1 Template:GuiCommand/de
- 19.01%    2.565      1 Template:Sketcher_Tools_navi/de
- 15.26%    2.060      2 Template:Value
- 13.46%    1.816      2 Template:Docnav/de
- 11.65%    1.572      4 Template:MenuCommand
-  8.82%    1.190      1 Template:Userdocnavi/de
-  6.99%    0.943      2 Template:Navigation_menu_2
-  6.85%    0.925      2 Template:Incode
-  6.67%    0.901      4 Template:KEY
+100.00%   57.149      1 -total
+ 34.01%   19.438      1 Template:Sketcher_Tools_navi/de
+ 20.42%   11.668      2 Template:Value
+ 12.99%    7.425      1 Template:Button
+ 12.47%    7.125      1 Template:Userdocnavi/de
+ 12.05%    6.887      2 Template:Navigation_menu_2
+  9.58%    5.473      2 Template:Incode
+  9.21%    5.266      1 Template:GuiCommand/de
+  4.68%    2.674      2 Template:Docnav/de
+  4.47%    2.556      4 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:332249-0!canonical and timestamp 20250921081903 and revision id 1646753. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:332249-0!canonical and timestamp 20260119144918 and revision id 1740955. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
