--- a/wiki/it/Macro_FCInfo_ToolBar.html
+++ b/wiki/it/Macro_FCInfo_ToolBar.html
@@ -227,7 +227,7 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 <li>Creare la directory <i>FCInfo_ToolBar</i>.</li>
 <li>Copiare la macro FCInfo_ToolBar.FCMacro (copiare non spostare) nella directory <i>FCInfo_ToolBar</i> e rinominarla in FCInfo_ToolBar.py</li>
 <li>Creare un file chiamato InitGui.py</li>
-<li>Incolla il codice in InitGui.py:</li></ol>
+<li>Incollare il codice in InitGui.py:</li></ol>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="c1">#### FC Version: 0.1 #16/02/2022</span>
 <span class="c1">#### Mario52</span>
 <span class="c1">#### FCInfo_ToolBar&nbsp;: mini FCInfo ####</span>
@@ -286,12 +286,12 @@ km, hm, dam, m, dm, cm, mm, &micro;m, nm, pm, fm, inch, link, foot, yard, perch,
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260119153406
+Cached time: 20260119153445
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.055 seconds
-Real time usage: 0.279 seconds
+CPU time usage: 0.054 seconds
+Real time usage: 0.312 seconds
 Preprocessor visited node count: 235/1000000
 Post&#8208;expand include size: 5545/2097152 bytes
 Template argument size: 2626/2097152 bytes
@@ -302,16 +302,16 @@ Unstrip post&#8208;expand size: 6852/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   67.995      1 -total
- 27.05%   18.390      1 Template:Macro
- 19.11%   12.991      6 Template:Code
- 18.86%   12.826      2 Template:TRUE
- 16.79%   11.415      1 Template:Codeextralink
-  9.43%    6.410      3 Template:Caption
-  6.69%    4.546      2 Template:FALSE
+100.00%   75.694      1 -total
+ 20.12%   15.233      1 Template:Macro
+ 17.21%   13.027      6 Template:Code
+ 15.73%   11.909      1 Template:Codeextralink
+ 14.88%   11.260      3 Template:Caption
+ 14.78%   11.186      2 Template:FALSE
+ 11.52%    8.718      2 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119153406 and revision id 1740989. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:279235-0!canonical and timestamp 20260119153444 and revision id 1740991. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
